Bug 137993 - Crash after closing one window and pressing enter in the other window with search bar focused (GTK3)
Summary: Crash after closing one window and pressing enter in the other window with se...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.0.3.1 release
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.4
Keywords: bibisected, bisected, regression
: 137994 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-11-04 21:47 UTC by pavelz
Modified: 2025-12-17 12:00 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pavelz 2020-11-04 21:47:45 UTC
Description:
When there are two windows opened, and a search is performed, then after closing the second window and pressing Enter LibreOffice crashes.

Steps to Reproduce:
1. Start e.g. Calc (but is happens in Writer too)
2. Open a second window - press Ctrl+N
3. Perform a search - press Ctrl+F, fill in some search string and press Enter
4. Switch to the second window and close it - press Alt+` (or Alt+Tab) and Ctrl+W (or Alt+F4)
5. Press Enter when the first window with the search bar is focused

Actual Results:
LibreOffice crashes

Expected Results:
LibreOffice should not crash, a search should continue in the first window


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.0.3.1
Build ID: 00(Build:1)
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2020-11-05 10:00:25 UTC
Reproduced in

Version: 7.1.0.0.alpha1+
Build ID: 9c8ed8c8526b9b696d0bf592eb7d963950f3cef4
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 2 Xisco Faulí 2020-11-05 10:00:40 UTC
*** Bug 137994 has been marked as a duplicate of this bug. ***
Comment 3 Xisco Faulí 2020-11-05 10:12:01 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=3b8c42a94b5448364d47daa103b3452f54990524

author	Caolán McNamara <caolanm@redhat.com>	2020-02-13 13:28:47 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2020-02-13 20:55:46 +0100
commit 3b8c42a94b5448364d47daa103b3452f54990524 (patch)
tree 36c281fdcd34355a2c080d4a4aa2f84cdc802fad
parent 8eab16d46f0c70cf9f7afb307ab4a56c49919ac4 (diff)
weld FindTextFieldControl

Bisected with: bibisect-linux64-7.0

Adding Cc: to Caolán McNamara
Comment 4 Xisco Faulí 2020-11-05 10:13:05 UTC
Not reproducible in

Version: 7.1.0.0.alpha1+
Build ID: 9c8ed8c8526b9b696d0bf592eb7d963950f3cef4
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

thus, only GTK3
Comment 5 Caolán McNamara 2020-11-09 10:42:54 UTC
I can reproduce.
Comment 6 Commit Notification 2020-11-09 16:30:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/36d14442b25bd3d700d95879e5775cce6ed0836d

tdf#137993 ensure the toplevel vcl::Window is activated

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2020-11-09 16:35:33 UTC
ok in master again, backport to 7-0 in gerrit
Comment 8 Commit Notification 2020-11-09 17:08:09 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/08beeee8908468d81713213be4271b64e1cb6981

tdf#137993 ensure the toplevel vcl::Window is activated

It will be available in 7.0.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2020-11-10 11:25:38 UTC
Verified in

Version: 7.1.0.0.alpha1+
Build ID: 03cafc2ab6b1678f82e9a30b6f81e505660ee702
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!
Comment 10 Roger D. Cook 2020-11-10 19:05:07 UTC Comment hidden (obsolete)
Comment 11 Robert. C 2020-12-03 10:06:56 UTC Comment hidden (obsolete)