tdf#137993 ensure the toplevel vcl::Window is activated

when the search entry gains focus so that SfxViewFrame::Current is valid

Change-Id: Ibb21db12688a7d44758cf607da618035c22a062a